--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "four-bytes/four-marketplaces-http-client",
+    "name": "four-bytes/four-http-client",
     "description": "Modern PHP 8.4+ HTTP client factory and middleware library for marketplace API integrations",
     "type": "library",
     "license": "MIT",
@@ -16,10 +16,8 @@
         "marketplace",
         "api",
         "rate-limiting",
-        "amazon",
-        "ebay",
-        "discogs",
-        "bandcamp"
+        "psr-18",
+        "psr-7"
     ],
     "require": {
         "php": ">=8.4",
@@ -29,7 +27,9 @@
         "psr/log": "^3.0",
         "psr/cache": "^3.0",
         "psr/http-client": "^1.0",
-        "psr/http-message": "^2.0"
+        "psr/http-factory": "^1.0",
+        "psr/http-message": "^2.0",
+        "php-http/discovery": "^1.19"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
@@ -39,12 +39,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Four\\MarketplaceHttp\\": "src/"
+            "Four\\Http\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Four\\MarketplaceHttp\\Tests\\": "tests/"
+            "Four\\Http\\Tests\\": "tests/"
         }
     },
     "config": {
@@ -66,7 +66,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "1.0-dev"
+            "dev-main": "2.0-dev"
         }
     }
 }
