--- a/composer.json
+++ b/composer.json
@@ -21,22 +21,32 @@
     ],
     "require": {
         "php": ">=8.4",
-        "symfony/http-client": "^7.2",
-        "symfony/rate-limiter": "^7.2",
-        "symfony/cache": "^7.2",
         "psr/log": "^3.0",
         "psr/cache": "^3.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^2.0",
-        "php-http/discovery": "^1.19"
+        "php-http/discovery": "^1.19",
+        "four-bytes/four-rate-limiting": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
         "phpstan/phpstan": "^2.0",
         "symfony/var-dumper": "^7.2",
-        "nyholm/psr7": "^1.8"
+        "nyholm/psr7": "^1.8",
+        "symfony/http-client": "^7.2",
+        "symfony/cache": "^7.2"
     },
+    "suggest": {
+        "symfony/http-client": "Empfohlener PSR-18 HTTP Transport (Standard-Implementierung)",
+        "guzzlehttp/guzzle": "Alternative PSR-18 Implementierung"
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "/home/robby/four-rate-limiting"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Four\\Http\\": "src/"
