--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
     "require": {
         "php": ">=8.4",
         "psr/log": "^3.0",
-        "psr/cache": "^3.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^2.0",
@@ -32,14 +31,13 @@
     "require-dev": {
         "phpunit/phpunit": "^11.0",
         "phpstan/phpstan": "^2.0",
-        "symfony/var-dumper": "^7.2",
         "nyholm/psr7": "^1.8",
-        "symfony/http-client": "^7.2",
-        "symfony/cache": "^7.2"
+        "php-http/mock-client": "^1.6"
     },
     "suggest": {
-        "symfony/http-client": "Empfohlener PSR-18 HTTP Transport (Standard-Implementierung)",
-        "guzzlehttp/guzzle": "Alternative PSR-18 Implementierung"
+        "symfony/http-client": "PSR-18 HTTP Client Implementierung (automatisch via php-http/discovery erkannt)",
+        "guzzlehttp/guzzle": "Alternative PSR-18 Implementierung",
+        "nyholm/psr7": "PSR-7 Implementierung (wird für Tests empfohlen)"
     },
     "repositories": [
         {
