--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "psr/http-factory": "^1.0",
         "psr/http-message": "^2.0",
         "php-http/discovery": "^1.19",
-        "four-bytes/four-rate-limiting": "*"
+        "four-bytes/four-rate-limiting": "^1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
@@ -39,12 +39,6 @@
         "guzzlehttp/guzzle": "Alternative PSR-18 Implementierung",
         "nyholm/psr7": "PSR-7 Implementierung (wird für Tests empfohlen)"
     },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "/home/robby/four-rate-limiting"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "Four\\Http\\": "src/"
